--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ dmypy.json
 .pyre/
 
 .vscode/*
-!.vscode/settings.json
+# !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
